**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-7

* Slightly more accurate smoothing parameter uncertainty correction. Changes 
  edf2 used for AIC (under RE/ML). 

1.8-6

* Generalization of list formula handling to allow linear predictors to
  share terms. e.g. gam(list(y1~s(x),y2~s(z),1+2~s(v)+w-1),family=mvn(d=2))

* New German translation thanks to Detlef Steuer.

* plot.gam now silently returns a list of plotting data, to help advanced 
  users (Fabian Scheipl) to produce custimized plot.

* bam can now set up an object suitable for fitting, but not actually do
  the fit, following a suggestion by Fabian Scheipl. See arguments 'fit' 
  and 'G'. 

1.8-5

* Korean translation added thanks to Chel Hee Lee.

* scale parameter handling in edf in logLik.gam made consistent with glm 
  (affects AIC).

* 'bam', 'gam' and 'gamm' modified to often produce smaller files when models 
  saved (and never to produce absurdly large files). Achieved by setting 
  environment of formula, terms etc to .GlobalEnv. Previously 'save' could
  save entire contents of environment of formula/terms with fitted model 
  object. Note that change can cause failure in user written functions calling 
  gam/bam and then 'predict' without supplying all prediction variables 
  (fix obvious).

* A help file 'single.index' supplied illustrating how single index models
  can be estimated in mgcv.

* predict.gam now only creates a "constant" attribute if the model has one.

* gam.fit4 convergence testing of coefs modified to more robust test of
  gradients of penalized dev w.r.t. params, rather than change in params,
  which can fail under rank deficiency.

* mgcv_qrqy was not thread safe. Not noticeable on many platforms as all 
  threads did exactly the same thing to the same matrix, but very noticeable
  on Windows. Thread safe mgcv_qrqy0 added and used in any parallel sections.

* Allow openMP support if compiler supports it and provides pre-defined macro 